infra/k8s/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /storybook
            pathType: Prefix
            backend:
              service:
                name: storybook
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
